infra/cdk.out/ChatNetworkStack.template.json
{
 "Resources": {
  "ChatVpc169D4061": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "ChatNetworkStack/ChatVpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ChatNetworkStack/ChatVpc/Resource"
   }
  },
  "ChatVpcPublicSubnet1SubnetCE61F29A": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.0.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "ChatNetworkStack/ChatVpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "ChatVpc169D4061"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ChatNetworkStack/ChatVpc/PublicSubnet1/Subnet"
   }
  },
  "ChatVpcPublicSubnet1RouteTable32EC8E32": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "ChatNetworkStack/ChatVpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "ChatVpc169D4061"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ChatNetworkStack/ChatVpc/PublicSubnet1/RouteTable"
   }
  },
  "ChatVpcPublicSubnet1RouteTableAssociationFB3C646A": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "ChatVpcPublicSubnet1RouteTable32EC8E32"
    },
    "SubnetId": {
     "Ref": "ChatVpcPublicSubnet1SubnetCE61F29A"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ChatNetworkStack/ChatVpc/PublicSubnet1/RouteTableAssociation"
   }
  },
  "ChatVpcPublicSubnet1DefaultRoute41DA5584": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "ChatVpcIGW9287F35D"
    },
    "RouteTableId": {
     "Ref": "ChatVpcPublicSubnet1RouteTable32EC8E32"
    }
   },
   "DependsOn": [
    "ChatVpcVPCGW0A40AC03"
   ],
   "Metadata": {
    "aws:cdk:path": "ChatNetworkStack/ChatVpc/PublicSubnet1/DefaultRoute"
   }
  },
  "ChatVpcPublicSubnet1EIP8AB02D36": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "ChatNetworkStack/ChatVpc/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ChatNetworkStack/ChatVpc/PublicSubnet1/EIP"
   }
  },
  "ChatVpcPublicSubnet1NATGateway53AB0BF6": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "ChatVpcPublicSubnet1EIP8AB02D36",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "ChatVpcPublicSubnet1SubnetCE61F29A"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "ChatNetworkStack/ChatVpc/PublicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "ChatVpcPublicSubnet1DefaultRoute41DA5584",
    "ChatVpcPublicSubnet1RouteTableAssociationFB3C646A"
   ],
   "Metadata": {
    "aws:cdk:path": "ChatNetworkStack/ChatVpc/PublicSubnet1/NATGateway"
   }
  },
  "ChatVpcPublicSubnet2SubnetD6DA27BB": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.0.64.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "ChatNetworkStack/ChatVpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "ChatVpc169D4061"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ChatNetworkStack/ChatVpc/PublicSubnet2/Subnet"
   }
  },
  "ChatVpcPublicSubnet2RouteTable3204E1E5": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "ChatNetworkStack/ChatVpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "ChatVpc169D4061"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ChatNetworkStack/ChatVpc/PublicSubnet2/RouteTable"
   }
  },
  "ChatVpcPublicSubnet2RouteTableAssociationF45FB0D0": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "ChatVpcPublicSubnet2RouteTable3204E1E5"
    },
    "SubnetId": {
     "Ref": "ChatVpcPublicSubnet2SubnetD6DA27BB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ChatNetworkStack/ChatVpc/PublicSubnet2/RouteTableAssociation"
   }
  },
  "ChatVpcPublicSubnet2DefaultRoute18836019": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "ChatVpcIGW9287F35D"
    },
    "RouteTableId": {
     "Ref": "ChatVpcPublicSubnet2RouteTable3204E1E5"
    }
   },
   "DependsOn": [
    "ChatVpcVPCGW0A40AC03"
   ],
   "Metadata": {
    "aws:cdk:path": "ChatNetworkStack/ChatVpc/PublicSubnet2/DefaultRoute"
   }
  },
  "ChatVpcPrivateSubnet1Subnet72514D4C": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.128.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "ChatNetworkStack/ChatVpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "ChatVpc169D4061"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ChatNetworkStack/ChatVpc/PrivateSubnet1/Subnet"
   }
  },
  "ChatVpcPrivateSubnet1RouteTable5877A9F1": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "ChatNetworkStack/ChatVpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "ChatVpc169D4061"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ChatNetworkStack/ChatVpc/PrivateSubnet1/RouteTable"
   }
  },
  "ChatVpcPrivateSubnet1RouteTableAssociation7B9CAD06": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "ChatVpcPrivateSubnet1RouteTable5877A9F1"
    },
    "SubnetId": {
     "Ref": "ChatVpcPrivateSubnet1Subnet72514D4C"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ChatNetworkStack/ChatVpc/PrivateSubnet1/RouteTableAssociation"
   }
  },
  "ChatVpcPrivateSubnet1DefaultRoute5700ABA5": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "ChatVpcPublicSubnet1NATGateway53AB0BF6"
    },
    "RouteTableId": {
     "Ref": "ChatVpcPrivateSubnet1RouteTable5877A9F1"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ChatNetworkStack/ChatVpc/PrivateSubnet1/DefaultRoute"
   }
  },
  "ChatVpcPrivateSubnet2SubnetAF09A63C": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.0.192.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "ChatNetworkStack/ChatVpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "ChatVpc169D4061"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ChatNetworkStack/ChatVpc/PrivateSubnet2/Subnet"
   }
  },
  "ChatVpcPrivateSubnet2RouteTableF97E791F": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "ChatNetworkStack/ChatVpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "ChatVpc169D4061"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ChatNetworkStack/ChatVpc/PrivateSubnet2/RouteTable"
   }
  },
  "ChatVpcPrivateSubnet2RouteTableAssociation637C283C": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "ChatVpcPrivateSubnet2RouteTableF97E791F"
    },
    "SubnetId": {
     "Ref": "ChatVpcPrivateSubnet2SubnetAF09A63C"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ChatNetworkStack/ChatVpc/PrivateSubnet2/RouteTableAssociation"
   }
  },
  "ChatVpcPrivateSubnet2DefaultRoute43CF6FA4": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "ChatVpcPublicSubnet1NATGateway53AB0BF6"
    },
    "RouteTableId": {
     "Ref": "ChatVpcPrivateSubnet2RouteTableF97E791F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ChatNetworkStack/ChatVpc/PrivateSubnet2/DefaultRoute"
   }
  },
  "ChatVpcIGW9287F35D": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "ChatNetworkStack/ChatVpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ChatNetworkStack/ChatVpc/IGW"
   }
  },
  "ChatVpcVPCGW0A40AC03": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "ChatVpcIGW9287F35D"
    },
    "VpcId": {
     "Ref": "ChatVpc169D4061"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ChatNetworkStack/ChatVpc/VPCGW"
   }
  },
  "ChatAlb4E8E3C4C": {
   "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
   "Properties": {
    "LoadBalancerAttributes": [
     {
      "Key": "deletion_protection.enabled",
      "Value": "false"
     }
    ],
    "Scheme": "internet-facing",
    "SecurityGroups": [
     {
      "Fn::GetAtt": [
       "ChatAlbSecurityGroup9C9FFBB7",
       "GroupId"
      ]
     }
    ],
    "Subnets": [
     {
      "Ref": "ChatVpcPublicSubnet1SubnetCE61F29A"
     },
     {
      "Ref": "ChatVpcPublicSubnet2SubnetD6DA27BB"
     }
    ],
    "Type": "application"
   },
   "DependsOn": [
    "ChatVpcPublicSubnet1DefaultRoute41DA5584",
    "ChatVpcPublicSubnet1RouteTableAssociationFB3C646A",
    "ChatVpcPublicSubnet2DefaultRoute18836019",
    "ChatVpcPublicSubnet2RouteTableAssociationF45FB0D0"
   ],
   "Metadata": {
    "aws:cdk:path": "ChatNetworkStack/ChatAlb/Resource"
   }
  },
  "ChatAlbSecurityGroup9C9FFBB7": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Automatically created Security Group for ELB ChatNetworkStackChatAlb6F8C14EE",
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow from anyone on port 80",
      "FromPort": 80,
      "IpProtocol": "tcp",
      "ToPort": 80
     }
    ],
    "VpcId": {
     "Ref": "ChatVpc169D4061"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ChatNetworkStack/ChatAlb/SecurityGroup/Resource"
   }
  },
  "ChatAlbChatListener91F83D0A": {
   "Type": "AWS::ElasticLoadBalancingV2::Listener",
   "Properties": {
    "DefaultActions": [
     {
      "TargetGroupArn": {
       "Ref": "ChatAlbChatListenerChatTargetsGroup4B5F451F"
      },
      "Type": "forward"
     }
    ],
    "LoadBalancerArn": {
     "Ref": "ChatAlb4E8E3C4C"
    },
    "Port": 80,
    "Protocol": "HTTP"
   },
   "Metadata": {
    "aws:cdk:path": "ChatNetworkStack/ChatAlb/ChatListener/Resource"
   }
  },
  "ChatAlbChatListenerChatTargetsGroup4B5F451F": {
   "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
   "Properties": {
    "HealthCheckIntervalSeconds": 30,
    "HealthCheckPath": "/health",
    "Port": 8000,
    "Protocol": "HTTP",
    "TargetGroupAttributes": [
     {
      "Key": "stickiness.enabled",
      "Value": "false"
     }
    ],
    "TargetType": "ip",
    "VpcId": {
     "Ref": "ChatVpc169D4061"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ChatNetworkStack/ChatAlb/ChatListener/ChatTargetsGroup/Resource"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/1VQXWvDMAz8LX13vS3sZY9ZGaUwttCWvg5F0Tq1rh1sOaGE/PeRjyUZCHR3OsRJiX56ftGPK6jDGovr2nCum4MAXhXU4ashTHRzKlFtvu0p26gs5obxEHNL0mkz2rsodITc0KzPWhqCQwZhZydzB952Wdc+QLYgVMNdZZ4rEJoX76yQtzQZhiQjS0UAf25kRR0Io2e5b72LZZ9hKbSKDARhNA6KHAxYZHuuEt2kZWkY+2jvDorXfka+2/CPL30chOzo+cOL+RH8mWQKsqBtq/YUXPTYn/8ZpYzD+0a1VdYVpC/hoUoS3dXqEpjXPlrhG+n90H8Bf+scu7gBAAA="
   },
   "Metadata": {
    "aws:cdk:path": "ChatNetworkStack/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "AlbDns": {
   "Value": {
    "Fn::GetAtt": [
     "ChatAlb4E8E3C4C",
     "DNSName"
    ]
   }
  },
  "ExportsOutputRefChatAlbChatListenerChatTargetsGroup4B5F451F1A4D1A72": {
   "Value": {
    "Ref": "ChatAlbChatListenerChatTargetsGroup4B5F451F"
   },
   "Export": {
    "Name": "ChatNetworkStack:ExportsOutputRefChatAlbChatListenerChatTargetsGroup4B5F451F1A4D1A72"
   }
  },
  "ExportsOutputRefChatVpcPrivateSubnet1Subnet72514D4CD14686E6": {
   "Value": {
    "Ref": "ChatVpcPrivateSubnet1Subnet72514D4C"
   },
   "Export": {
    "Name": "ChatNetworkStack:ExportsOutputRefChatVpcPrivateSubnet1Subnet72514D4CD14686E6"
   }
  },
  "ExportsOutputRefChatVpcPrivateSubnet2SubnetAF09A63C174901C7": {
   "Value": {
    "Ref": "ChatVpcPrivateSubnet2SubnetAF09A63C"
   },
   "Export": {
    "Name": "ChatNetworkStack:ExportsOutputRefChatVpcPrivateSubnet2SubnetAF09A63C174901C7"
   }
  },
  "ExportsOutputRefChatVpc169D406150D6CBCB": {
   "Value": {
    "Ref": "ChatVpc169D4061"
   },
   "Export": {
    "Name": "ChatNetworkStack:ExportsOutputRefChatVpc169D406150D6CBCB"
   }
  },
  "ExportsOutputFnGetAttChatAlbSecurityGroup9C9FFBB7GroupIdF35B31DD": {
   "Value": {
    "Fn::GetAtt": [
     "ChatAlbSecurityGroup9C9FFBB7",
     "GroupId"
    ]
   },
   "Export": {
    "Name": "ChatNetworkStack:ExportsOutputFnGetAttChatAlbSecurityGroup9C9FFBB7GroupIdF35B31DD"
   }
  },
  "ExportsOutputFnGetAttChatAlb4E8E3C4CDNSName4FB98187": {
   "Value": {
    "Fn::GetAtt": [
     "ChatAlb4E8E3C4C",
     "DNSName"
    ]
   },
   "Export": {
    "Name": "ChatNetworkStack:ExportsOutputFnGetAttChatAlb4E8E3C4CDNSName4FB98187"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
